--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
 				<hr class="w-25 mx-auto pb-5">
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-12 mb-4">
-						<a href="" title=""><img src="images/one.jpg" class="img-fluid"></a>
+						<a href="" title=""><img src="one.jpg" class="img-fluid"></a>
 					</div>
 					<div class="col-lg-4 col-md-4 col-12 mb-4">
 						
-						<a href="" title=""><img src="images/two.jpg" class="img-fluid"></a>
+						<a href="" title=""><img src="two.jpg" class="img-fluid"></a>
 						
 					</div>
 					<div class="col-lg-4 col-md-4 col-12 mb-4">
-						<a href="" title=""><img src="images/three.jpg" class="img-fluid"></a>
+						<a href="" title=""><img src="three.jpg" class="img-fluid"></a>
 					</div>
 				</div>
 			</div>
