--- a/gallery.html
+++ b/gallery.html
@@ -48,9 +48,9 @@
 		<div class="container "id="gallery-section">
 			<div class="row pt-5 image-row">
 				<div class="column">
-					<a href="web1.jpg" title=""><img src="images/one.jpg" alt=""></a>
-					<a href="web1.jpg" title=""><img src="images/two.jpg" alt=""></a>
-					<a href="web1.jpg" title=""><img src="images/three.jpg" alt=""></a>
+					<a href="web1.jpg" title=""><img src="one.jpg" alt=""></a>
+					<a href="web1.jpg" title=""><img src="two.jpg" alt=""></a>
+					<a href="web1.jpg" title=""><img src="three.jpg" alt=""></a>
 				</div>
 				<div class="column">
 					<a href="web1.jpg" title=""><img src="web1.jpg" alt=""></a>
@@ -58,9 +58,9 @@
 					<a href="web1.jpg" title=""><img src="web1.jpg" alt=""></a>
 				</div>
 								<div class="column">
-					<a href="web1.jpg" title=""><img src="images/one.jpg" alt=""></a>
-					<a href="web1.jpg" title=""><img src="images/two.jpg" alt=""></a>
-					<a href="web1.jpg" title=""><img src="images/three.jpg" alt=""></a>
+					<a href="web1.jpg" title=""><img src="one.jpg" alt=""></a>
+					<a href="web1.jpg" title=""><img src="two.jpg" alt=""></a>
+					<a href="web1.jpg" title=""><img src="three.jpg" alt=""></a>
 				</div>
 			</div>
 		</div>
