--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap" rel="stylesheet">
-		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
@@ -24,6 +23,7 @@
 				<a class="nav-link" href="#">+88 01797120584</a>
 			</div>
 		</div>
+		<div class="body-content">
 		<nav class="navbar navbar-expand-lg navbar-light sticky-top bg-white" id="navbar">
 			<div class="container">
 				<a class="navbar-brand text-dark" href="#">Company name</a>
@@ -52,7 +52,43 @@
 				</div>
 			</div>
 		</nav>
-		<div class="body-content">
+		<div id="demo" class="carousel slide " data-ride="carousel">
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="one.jpg" alt="Los Angeles" style="width: 100%;">
+      <div class="carousel-caption">
+        <h3>Los Angeles</h3>
+        <p>We had such a great time in LA!</p>
+      </div>   
+    </div>
+    <div class="carousel-item">
+      <img src="two.jpg" alt="Chicago" style="width: 100%;">
+      <div class="carousel-caption">
+        <h3>Chicago</h3>
+        <p>Thank you, Chicago!</p>
+      </div>   
+    </div>
+    <div class="carousel-item">
+      <img src="three.jpg" alt="New York" style="width: 100%;">
+      <div class="carousel-caption">
+        <h3>New York</h3>
+        <p>We love the Big Apple!</p>
+      </div>   
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+		
 		</div>
 		<div id="booking">
 			<form action="" class="pt-3 container" method="post" accept-charset="utf-8">
@@ -113,6 +149,33 @@
 				</div>
 			</div>
 		</div>
+		
+		<!--service section start-->
+		<section class="header-extra ">
+			<div class="container">
+				<h2 class="text-center text-capitalize pt-5">Our Best Services</h2>
+				<hr class="w-25 mx-auto pb-4">
+				<div class="row">
+					<div class="extra-div col-lg-4 col-md-4 col-12">
+						<a href="" title=""><i class="text-info fa-3x fa fa-user-o" aria-hidden="true"></i></a>
+						<h2>Student</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+						</p>
+					</div>
+					<div class="extra-div col-lg-4 col-md-4 col-12">
+						<a href="" title=""><i class="text-info fa-3x fa fa-user-plus" aria-hidden="true"></i></a>
+						<h2>Family</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever. </p>
+					</div>
+					<div class="extra-div col-lg-4 col-md-4 col-12">
+						<a href="" title=""><i class="text-info fa-3x fa fa-users" aria-hidden="true"></i></a>
+						<h2>Corporate</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--service section end-->
 		<div class="service">
 			<div class="container">
 				<h2 class="text-center text-capitalize pt-5">Travel Tour</h2>
@@ -146,7 +209,7 @@
 				</div>
 			</div>
 		</div>
-				<div class="footer mt-5">
+		<div class="footer mt-5">
 			<div class="container">
 				<div class="row m-auto">
 					<div class="col-lg-4">
@@ -184,6 +247,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="text-white text-center copy"> © Copyright 2020.SHIFAT</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<!-- Popper JS -->
