--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
     <div class="carousel-item active">
       <img src="one.jpg" alt="Los Angeles" style="width: 100%;">
       <div class="carousel-caption">
-        <h3>Los Angeles</h3>
+        <h3>Kuakata</h3>
         <p>We had such a great time in LA!</p>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="two.jpg" alt="Chicago" style="width: 100%;">
       <div class="carousel-caption">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago!</p>
+        <h3>Cox's Bazar</h3>
+        <p>Thank you,Cox's Bazar!</p>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="three.jpg" alt="New York" style="width: 100%;">
       <div class="carousel-caption">
-        <h3>New York</h3>
+        <h3>Saint Mertin</h3>
         <p>We love the Big Apple!</p>
       </div>   
     </div>
